調整 swagger
